header + block images

--- a/style.css
+++ b/style.css
@@ -1,12 +1,55 @@
+header{
+    margin-bottom: 50px;
+}
+
+
+header li {
+                liste-style:none;
+                display:inline-block;
+                width:18%;
+                texte-align:center;
+                text-align: center;
+                border-radius:10px;
+                text-decoration:none;
+                font-family: 'Source Code Pro';
+               font-size:16px;
+}
+    
+header a {
+              color:black;
+              text-decoration:none;
+              opacity:1;
+              transition: 0.5s opacity linear;
+}
+
+header a:hover{
+    opacity:0.5;
+}
+
+header h1 {
+               font-family: 'Source Code Pro';
+               font-size:60px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 h1 {font-family: 'Julius Sans One', sans-serif;
 }
 
-.galerie-bloc{
+.galerie{
+    text-align: center;
+}
+
+.galerie-bloc {
     display: inline-block;
     position: relative;
 }
 
-.galerie-legende{
+.galerie-legende {
     position: absolute;
     top:50%;
     left:0;
@@ -15,15 +58,18 @@ h1 {font-family: 'Julius Sans One', sans-serif;
     text-align:center;
 }
 
-.galerie-legende p{
+.galerie-legende p {
     background-color:green;
     padding:10px 20px;
     border-radius:10px;
     font-size:20px;
     opacity:0.8;
-    color:white;
-    
-    
+    color:white;    
     margin:0;
     display: inline-block;
+}
+
+img {
+    max-width: 500px;
+    display: block;
 }
